# dsk-rs

./: .gitignore  Cargo.toml  README.md  test.fq
src/: cli.yml  dsk.rs  kmer.rs  kmer_old.rs  kmers.rs  kmers_old2.rs  main.rs  old_main.rs
