[package]
name = "dsk-rs"
version = "0.1.0"
authors = ["Erik Clarke <erikclarke@fastmail.com>"]

[dependencies]
clap="*"
bio="0.13"
num="*"
error-chain="*"
kmers = { git="https://github.com/eclarke/kmer-rs.git" }
slog="*"
slog-term="*"
slog-async="*"
tempdir="0.3.5"
serde="1.0.7"
serde_bytes="0.10.0"
byteorder="1.0.0"
bincode="1.0.0-alpha7"
serde_derive="*"