[package]
name = "dsk"
version = "0.2.0"
authors = ["Erik Clarke <erikclarke@fastmail.com>"]

[dependencies]
bio="0.13"
num="*"
error-chain="*"
kmers = { git="https://github.com/eclarke/kmer-rs.git" }
fastx = { git="https://github.com/eclarke/fastx.git" }
slog="*"
slog-async="*"
slog-term="*"
slog-stdlog="*"
tempdir="0.3.5"
serde="1.0.7"
serde_bytes="0.10.0"
byteorder="1.0.0"
bincode="1.0.0-alpha7"
serde_derive="*"
num-bigint="0.1.37"
num-traits="0.1.37"
dsk="*"

[dependencies.clap]
version = "~2.24.2"
features = ["yaml"]

[[bin]]
name="dsk"
path="src/main.rs"

[lib]
name="dsk"
path="src/dsk.rs"